crates/mecojoni-core/tests/fixtures/valid/unicode-terminal.meco
---
meco: 1.0
module: unicode
---

# greeting
- Héllo, 世界 🦀.

# block
- |-
  café
  世界
