crates/mecojoni-core/tests/fixtures/invalid/body-unterminated-comment.meco
---
meco: 1.0
module: invalid
---

<!-- never closes
